--- a/media-queries.css
+++ b/media-queries.css
@@ -1,20 +1,18 @@
-/* Common styles */
-
 /* Media Queries */
 @media only screen and (max-width: 768px) {
-    .menu {
+  .menu {
       display: none;
-    }
-  
-    .hamburger-menu {
+  }
+
+  .hamburger-menu {
       display: block;
-    }
-  
-    nav {
+  }
+
+  nav {
       justify-content: flex-end;
-    }
-  
-    .dropdown-content {
+  }
+
+  .dropdown-content {
       display: none;
       position: absolute;
       top: 100%;
@@ -23,65 +21,62 @@
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
-    }
-  
-    .dropdown-content a {
+  }
+
+  .dropdown-content a {
       display: block;
       padding: 12px 16px;
       text-decoration: none;
       color: black;
-    }
-  
-    .dropdown:hover .dropdown-content {
+  }
+
+ 
+  .dropdown:hover .dropdown-content {
       display: block;
-    }
-  
-    main {
+  }
+
+  main {
       padding: 20px 10px;
       display: flex;
       flex-direction: column;
-    }
-  
-    .text-container,
-    .main-image-container {
+  }
+
+  .text-container {
+    padding: 10px; /* Reduce padding for smaller screens */
+    flex: 0 1 auto; 
+    word-wrap: break-word;
+  }
+
+  .main-image-container {
       width: 100%;
       max-width: 100%;
       order: 1;
-    }
-  
-    .lefthalf,
-    .righthalf {
+  }
+
+  .lefthalf,
+  .righthalf {
       width: 100%;
-    }
+      max-width: 100%;
+      order: 2;
   }
   
-  @media screen and (max-width: 320px) {
-    .menu {
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
-  }
   
-  @media screen and (min-width: 321px) and (max-width: 480px) {
-    h1 {
-      font-size: 1.5rem;
-    }
+
+  .info-box {
+      width: 100%; /* Ensure the info-box spans the full width */
   }
-  
-  @media screen and (min-width: 481px) and (max-width: 768px) {
-    button {
-      padding: 10px;
-    }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+      font-size: 1.5rem; /* Adjust font size for smaller screens */
   }
-  
-  @media screen and (max-width: 768px) {
-    .container {
-      flex-direction: column; /* Stack elements vertically on smaller screens */
-    }
+
+  button {
+      padding: 10px; /* Adjust padding for buttons */
   }
-  
-  @media screen and (max-width: 480px) {
-    .text-container {
-      font-size: 14px; /* Decrease font size for smaller screens */
-    }
+
+  .text-container {
+      font-size: 5px; /* Decrease font size for smaller screens */
   }
+}
